--- a/apple-pie/styles/style.css
+++ b/apple-pie/styles/style.css
@@ -6,6 +6,7 @@ body {
 .header {
     background-image: url(../images/apple-pie.jpg);
     background-size: cover;
+    background-repeat: no-repeat;
     height: 500px;
     display: flex;
     justify-content: center;
